[Fix] changing to vertical align and fixing wrong selectors

--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -294,7 +294,7 @@ ul.row {
     height: 30rem;
     width: 100%;
     object-fit: cover;
-    bottom: 0;
+    vertical-align: bottom;
 }
 
 .card-work .card-inner {
@@ -305,7 +305,7 @@ ul.row {
     z-index: 1;
 }
 
-.card-inner:hover {
+.card-work:hover .card-inner {
     background-color: rgba(0, 0, 0, 0.7);
 }
 .card-work .card-title {
